# VenC

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  TODOs.md  build.xml  changelog.md  install.sh  installSrc.sh  pyproject.toml  setup.py  todo  unittest.py
VenC-site/: blogConfiguration.yaml  blog_configuration.yaml
VenC-site/entries/: 10__02-08-2020-18-32__Les_templates  11__02-08-2020-19-17__Les_publications  12__03-13-2020-11-51__Créer_une_nouvelle_publication  13__03-13-2020-16-48__Publier  14__03-13-2020-17-13__Mettre_en_ligne  15__03-13-2020-17-26__Les_Thèmes  16__03-13-2020-17-51__Configuration_d'un_thème  17__05-02-2020-21-59__Pattern_Processor  18__05-02-2020-22-16__Accesseurs_de_publications_et_de_Templates  18__05-02-2020-22-16__Motifs_de_Templates  19__05-02-2020-22-50__Accesseurs_globaux  19__05-02-2020-22-50__Motifs_super_globaux  1__11-16-2018-11-33__Présentation  1__9-6-2017-10-26__Features  20__05-13-2020-15-24__Motifs_de_type_Accesseur  21__05-16-2020-20-19__Metadata  22__05-22-2020-18-53__Motifs_Conditionnels  23__06-01-2020-16-57__Page_Layout  24__06-01-2020-17-53__Chemins  24__06-01-2020-17-53__Paths  25__06-01-2020-17-58__code_generator  26__06-01-2020-19-22__Miscellaneous_patterns  27__07-20-2020-14-33__Multimedia_content  28__07-28-2020-12-08__Commandes  29__07-28-2020-12-10__Display_VenC_Version  2__11-16-2018-13-8__Installation  30__07-28-2020-12-12__Make_a_new_blog  31__07-28-2020-12-19__Make_a_new_post  32__07-28-2020-12-35__Export_blog  33__07-28-2020-12-39__Export_blog_to_remote_server  34__07-28-2020-12-43__Remote_copy  35__07-28-2020-12-46__Edit_and_export  36__07-28-2020-13-11__Display_reminder  37__07-28-2020-13-15__Install_theme  38__07-28-2020-13-19__Start_local_server  39__09-01-2020-18-48__Default_themes_configuration  3__11-16-2018-13-27__Créer_son_blog_en_moins_de_5_minutes!  40__09-06-2020-16-06__JS_Scripts  41__09-14-2020-13-32__Infinite_Scroll  42__10-02-2020-22-36__Arbre  (+8 more)
VenC-site/extra/: VenC-Tree-0.1.0.js  venc_source_CSS.css  venc_source_Javascript.css  venc_source_Text.css  venc_source_Yaml.css  venc_source_html.css
VenC-site/includes/: Chapters_example  GetBlogMetadataIfExists_example  GetBlogMetadataIfNotNull_example  GetEntryMetadataIfExists_example  GetEntryMetadataIfNotNull_example  TreeForBlogCategories_example  TreeForEntryCategories_example  codehighlight_example1  empty_entry  escape  inf-scroll-footer-html  inf-scroll-header-html  infinite-scroll-1  introducing.html  nsfw-example  table_example_1  template_example  theme-configuration-example  things_to_do.txt  tree-1  tree-2
VenC-site/theme/: config.yaml
doc/: EN.md  FR.md  FRnew.md  docFR.html  faqEN.md  faqFR.md  howtoEN.md  howtoFR.md
doc-fr/: blog_configuration.yaml  generate_cheat_sheet.py  reorder_chapter_hyperlinks.py
doc-fr/entries/: 10__03-16-2023-15-55__Low_footprint_and_minimal_environment  11__02-08-2020-19-17__entries  12__05-16-2020-20-19__Metadata  13__02-08-2020-18-32__Entry_Templates  14__03-31-2023-13-46__Template_Arguments  15__04-01-2023-13-41__Template_Argument_use_case_1_oembed  16__04-01-2023-13-41__Template_Argument_use_case_2_images  17__03-31-2023-16-59__Default_Template_arguments  18__04-02-2023-14-50__Themes  19__04-02-2023-15-40__Setup_theme  1__02-23-2023-19-47__introducing  20__04-07-2023-14-48__Built_in_JS_scripts  21__04-07-2023-15-02__JS_Script_Loader  22__04-07-2023-16-20__Infinite_Scroll  23__04-07-2023-17-03__Tree  24__04-08-2023-16-03__Default_Theme  25__04-08-2023-16-07__Pattern_Processor  26__04-08-2023-17-22__Syntax  27__04-23-2023-04-29__Pattern_variables  28__04-23-2023-04-12__Contextual_Patterns  29__04-25-2023-22-13__Non_Contextual_Patterns  2__02-24-2023-20-01__Features  30__04-25-2023-22-44__Entry_Related_Patterns  31__04-29-2023-10-23__Blog_Related_Patterns  32__05-02-2023-22-12__miscellaneous_Patterns  33__05-07-2023-12-39__Pattern_Reference_Sheet  34__05-08-2023-13-13__Commands  35__05-08-2023-13-14__Display_VenC_Version  36__05-08-2023-13-16__Create_New_Blog  37__05-08-2023-13-21__Add_New_Entry  38__05-08-2023-13-30__Export_blog  (+42 more)
monBLog/: blog_configuration.yaml
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
src/: setup.py  venc  venc-blog-migration  venc-unit-test  venc-unit-test.py  venc.py
src/VenC/: new.py  (+18 more)
test/: indexSpeedTest.py  l10n_cleanup.py  mistletoe_parser.py  parallel-copy.py  parallel-pipe.py  patterns_processing.py  pythonic_vs_third_party.py  run.py  serial.py  test_engine.py  themes.py
venc/: __init__.py  exceptions.py  helpers.py  prompt.py  venc.py
(+565 files in other folders)
