#   Copyright 2016, 2024 Denis Salem
#
#    This file is part of VenC.
#
#    VenC is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    VenC is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with VenC.  If not, see <http://www.gnu.org/licenses/>.

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "VenC"
version = "3.2.4"
description = "A static blog generator."
license = {file = "LICENSE.md"}
authors = [
    {name = "Denis Salem", email = "denissalem@tuxfamily.org"}
]
classifiers=[
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3"
]
urls = {source = "https://framagit.org/denissalem/VenC", documentation = "https://venc.software"}
dependencies = ["pyyaml","unidecode"]

[project.scripts]
venc = "venc3.main:venc_entry_point"

[tool.flit.module]
name = "venc3"

[tool.flit.sdist]
exclude = ["test/"]
